<resources>
    <string name="app_name">Warsaw Tour Top 10</string>
    <string name="category_old_town">Old Town</string>
    <string name="category_fryderyk_chopin">Fryderyk Chopin\'s Warsaw</string>
    <string name="category_rising_museum">Warsaw Rising Museum</string>
    <string name="category_palace_of_cul_and_sci">Palace of Culture and Science</string>
    <string name="category_royal_residences">Royal Residences</string>
    <string name="category_judaica">Judaica</string>
    <string name="category_copernicus">Copernicus Science Centre</string>
    <string name="category_national_museum">National Museum in Warsaw</string>
    <string name="category_vistula">Vistula</string>
    <string name="category_pge_narodowy">PGE Narodowy stadium</string>
    <string name="old_town_header_body_text">Priceless historic site inscribed on the UNESCO World Heritage List</string>
    <string name="old_town_body_text">The history of the Warsaw Old Town goes back over 700 years. Razed to the ground during World War II, the Old Town has been reconstructed from scratch. UNESCO has inscribed it on its list of World Cultural Heritage. The Royal Castle is one of the most eagerly visited attractions in Warsaw. It offers valuable exhibits, such as royal thrones. At the foot of the Castle, from the Vistula River side, there are meticulously renovated Kubicki Arcades and two-level gardens. In summertime, the Old Town is filled with coffee gardens and numerous cultural festivals are held in the Old and New Town Squares, the Castle courtyard and the Arcades. In winter, the Old Town and the Royal Route glitter with captivating illuminations. The king Zygmunt column towers over the square. Raised in the 17 th century and 22 metres high, it is the oldest and the highest monument in Warsaw. It honours king Zygmunt III Waza, who in 1596 moved the capital from Kraków to Warsaw. The statue fell during World War II and its present column was erected in 1949. The monument is always surrounded by crowds of people. This is where everyone making appointments in the Old Town meets.</string>
    <string name="old_town_header">Old Town</string>
    <string name="see_on_a_map">see on a map</string>
    <string name="map">Map</string>
    <string name="old_town_content_description">Light blue background</string>
    <string name="worth_seeing">Worth seeing!</string>
    <string name="mermaid_statue"><b>Mermaid Statue</b> – a guardian and symbol of Warsaw standing in the Old Town Square. The second one is located near the Świętokrzyski Bridge, but the statues of half woman half fish can be found around the city.</string>
    <string name="paintings_by_rembrandt"><b>Paintings by Rembrandt, Royal Castle Museum pl. Zamkowy 4</b>, \"Girl in a Picture Frame\" and \"A Scholar at his Writing Table\" – works of the Dutch master in the Lanckoroński Gallery.</string>
    <string name="royal_castle_page"><u>www.zamek-krolewski.pl/en</u></string>
    <string name="hidden_in_the_basements"><b>Hidden in the basements</b> – Old Town basements form the Route of the Old Town Cultural Basements. They can be reached from a number of places, e.g. at the Museum of Warsaw (Rynek Starego Miasta 28-42) and at ul. Brzozowa 11/13 (Hertiage Interpretation Centre). In the crypt of the Cathedral Basilica (ul. Świętojańska 8) there are tombs of the last Polish king Stanisław August Poniatowski, outstanding pianist and politician Ignacy Jan Paderewski and many others.</string>
    <string name="worth_trying">Worth trying!</string>
    <string name="wuzetka_and_zygmuntowka"><b>Wuzetka and Zygmuntówka cakes.</b> Sweet symbols of Warsaw can be bought in cake shops around the city, although they taste best served in cosy Old Town cafes.</string>
    <string name="fryderyk_chopin_content_description">Cyan background</string>
    <string name="fryderyk_chopin_header">Fryderyk Chopin\'s Warsaw</string>
    <string name="fryderyk_chopin_header_page">en.chopin.warsawtour.pl</string>
    <string name="fryderyk_chopin_header_body_text">The genius composer, Fryderyk Chopin spent half of his life in Warsaw.</string>
    <string name="fryderyk_chopin_body_text">This is where he grew up, was educated and composed many of his masterpieces. Multimedia benches are signposts that help follow his footsteps. Every one of them signifies a site that was meaningful to the composer.</string>
    <string name="worth_listening">Worth listening!</string>
    <string name="fryderyk_chopin_concert">Concerts at the foot of the Chopin Monument, the Royal Łazienki (entrance at Aleje Ujazdowskie)</string>
    <string name="fryderyk_chopin_royal_lazienki"><u>www.lazienki-krolewskie.pl/en</u></string>
    <string name="fryderyk_chopin_concert_text">Concerts are held every Sunday at noon and 4 p.m., from mid-May till the end of September. Chopin’s music may also be listened to at the most important concert halls in Warsaw, e.g. during the annual \"Chopin and his Europe\" International Music Festival.</string>
    <string name="fryderyk_chopin_festiwal_page"><u>www.festiwal.nifc.pl/en/</u></string>
    <string name="fryderyk_chopin_museum">Fryderyk Chopin Museum, ul. Okólnik 1</string>
    <string name="fryderyk_chopin_museum_page"><u>chopin.museum/en</u></string>
    <string name="fryderyk_chopin_museum_text">Modern, multimedia, interactive and full of brilliant Chopin-related exhibits. Here you can see the composer\'s last piano, his candy box, his death mask, hand cast, etc.</string>
    <string name="fryderyk_chopin_church">The Church of the Holy Cross on the Royal Route ul. Krakowskie Przedmieście 3</string>
    <string name="fryderyk_chopin_church_text">The urn containing Chopin’s heart, brought from France by the composer’s beloved sister, is immured in the left pillar of the main nave of the church.</string>
    <string name="rising_museum_header">Warsaw Rising Museum</string>
    <string name="rising_museum_header_page">www.1944.pl/en</string>
    <string name="rising_museum_header_body_text">One of the most modern and most frequently visited of all Warsaw museums.</string>
    <string name="rising_museum_body_text"><b>This is an expression of homage paid by Varsovians to those who fought and died for a free Poland and her capital.</b> The multimedia exhibition shows the struggle and daily lives of insurgents against the backdrop of dread under Nazi occupation, and tells the story of post-war communist terror and the fate of the Uprising’s survivors in the Polish People’s Republic. Lectures, film screenings, theatrical performances and concerts take place here: the greatest number of events are held during the week immediately preceding August 1st – the anniversary of the first day of the 1944 armed insurgence against the Nazi occupants.</string>
    <string name="worth_knowing">Worth knowing!</string>
    <string name="rising_museum_every_year"><b>Every year, on August 1st at 5:00 p.m.</b> sirens are sounded, and all pedestrian and street traffic stops for one minute. This is how Warsaw remembers her insurgents.</string>
    <string name="lime_background">Lime background</string>
    <string name="judaica_header">Judaica</string>
    <string name="judaica_header_body_text">Before World War II, Jews accounted for 30 per cent of Warsaw residents.</string>
    <string name="judaica_body_text">Writer and Noble Prize laureate Isaac Bashevis Singer, writer, doctor and teacher Janusz Korczak, actress Estera Rachela Kamińska and composer Władysław Szpilman all lived here. There were hundreds of Jewish schools and libraries, and over 130 newspaper titles. There were also theatres and sports clubs. The following monuments are reminders of the Holocaust: the Route Recalling the Martyrdom and the Struggle of the Jews, leading from Umschlagplatz at ul. Stawki to the Ghetto Uprising Monument at ul. Zamenhofa and cast iron plaques delineating the ghetto boundaries on the pavement.</string>
    <string name="worth_visiting">Worth visiting!</string>
    <string name="judaica_polin_header">POLIN - Museum of the History of Polish Jews, \n6 Anielewicza Street</string>
    <string name="judaica_polin_page"><u>www.polin.pl/en</u></string>
    <string name="judaica_polin_body">The story of one thousand years of common Polish-Jewish history, told in a symbolic location. The exhibition includes eight multimedia galleries: early medieval settlements, turbulent events over the centuries, the Holocaust and the post-1989 renaissance of Jewish communities.</string>
    <string name="judaica_polin_grzybowski_square"><b>Plac Grzybowski (Grzybowski Square),</b> the centre of Jewish culture in Warsaw. The Nożyk synagogue overlooks neighbouring Twarda Street. Próżna, the only surviving street of the pre-war Jewish district, leads off the square at a right angle.</string>
    <string name="judaica_ghetto_wall"><b>Between Sienna and Złota streets,</b> the last two fragments of the ghetto wall has been preserved. To see it, enter the courtyard from ul. Złota 62.</string>
    <string name="judaica_festivals"><b>Warsaw hosts festivals of Jewish culture</b>\n\"Singer’s Warsaw\" in August,</string>
    <string name="judaica_festivals_singer_page"><u>www.festiwalsingera.pl/en</u></string>
    <string name="judaica_festivals_film">\"Warsaw Jewish Film Festival\" in October,</string>
    <string name="judaica_festivals_film_page"><u>www.wjff.pl/en/</u></string>
    <string name="judaica_festivals_anniversary"><b>Every year, on April 19th,</b> the anniversary of the Ghetto Uprising, daffodils are given out on the streets as a symbol of memory, respect and hope.</string>
    <string name="orange_background">Orange background</string>
    <string name="vistula_header">Vistula</string>
    <string name="vistula_header_body_text">Warsaw’s new \"district\"</string>
    <string name="vistula_body_text">One would be hard-pressed to imagine Warsaw’s cityscape without the Vistula - the river has greatly impacted the city’s development and remains a source of numerous attractions for tourists and local residents alike. Outdoor events, beaches, water taxis, bicycle and pedestrian trails - to name just a few. Water sports lovers, families with young children and those seeking peace, quiet, and nature - everyone will find something to enjoy.</string>
    <string name="vistula_sail_down"><b>You can sail down the river!</b> The Pliszka, Słonka, and Wilga ferries will take you to the other side of Vistula in a matter of minutes - and they’re free! To enjoy an entirely new view of Warsaw, it’s worth taking the 90-minute water tram trip. Got the whole day off? Take the river boat to Serock.</string>
    <string name="vistula_sail_down_page"><u>www.ztm.waw.pl</u></string>
    <string name="vistula_urban_beaches"><b>Deckchairs, hammocks, ball game courts, places for bonfires</b> - urban beaches have a lot to offer.</string>
    <string name="vistula_facilities"><b>Gruba Kaśka (Plump Cathy) and Chudy Wojtek (Skinny Wojtek)</b> are the two Vistula facilities that have a job to do. Kaśka is the green tower in the middle of the river - the largest infiltration well in Europe. Wojtek is the boat charged with the task of loosening sediment at Kaśka’s feet.</string>
    <string name="vistula_fountain_park"><b>Water, Light, Sound shows</b> in the Multimedia Fountain Park, on Vistula’s left bank at the foot of the Old Town. On summer weekends (Fridays and Saturdays), a unique performance begins on the watery screen; lasers, animation and music blend into a colourful spectacle. For schedule details, visit</string>
    <string name="vistula_fountain_park_page"><u>www.estrada.com.pl</u></string>
    <string name="vistula_animals"><b>Wild animals in their natural habitat.</b> The Vistula’s river banks are home to many bird and mammal species. With a little patience and luck, you can see deer, wild boar, beavers, cormorants, hummingbirds, egrets and many other living things.</string>
</resources>