<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.piotrwysocki.warsawtourtop10.VistulaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/item_image_width"
            android:layout_height="match_parent"
            android:background="@color/colorVistula"
            android:contentDescription="@string/orange_background" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/vistulaHeaderItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/colorCategoryBackground"
                android:orientation="vertical"
                android:padding="@dimen/padding_16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/vistula_header"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorCategoryText" />

            </RelativeLayout>

            <ScrollView
                android:id="@+id/vistulaBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vistulaHeaderItem">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/padding_8dp"
                        android:text="@string/vistula_header_body_text"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/vistula_body_text" />

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/vistulaBody"
                android:gravity="bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorCategoryBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_16dp">

                    <ImageView
                        android:id="@+id/vistulaWorthKnowingArrow"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_keyboard_arrow_right_white_24dp" />

                    <TextView
                        android:id="@+id/vistulaWorthKnowing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/worth_knowing"
                        android:textAllCaps="true"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textColor="@color/colorCategoryText" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/vistulaWorthKnowingBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_16dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vistula_sail_down" />

                    <TextView
                        android:id="@+id/vistulaSailDownPage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/padding_8dp"
                        android:paddingTop="@dimen/padding_8dp"
                        android:text="@string/vistula_sail_down_page"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vistula_urban_beaches" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_8dp"
                        android:text="@string/vistula_facilities" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorCategoryBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_16dp">

                    <ImageView
                        android:id="@+id/vistulaWorthSeeingArrow"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_keyboard_arrow_right_white_24dp" />

                    <TextView
                        android:id="@+id/vistulaWorthSeeing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/worth_seeing"
                        android:textAllCaps="true"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textColor="@color/colorCategoryText" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/vistulaWorthSeeingBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_16dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vistula_fountain_park" />

                    <TextView
                        android:id="@+id/vistulaFountainParkPage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/padding_8dp"
                        android:paddingTop="@dimen/padding_8dp"
                        android:text="@string/vistula_fountain_park_page"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vistula_animals" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
